--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -18,7 +19,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "swiper": "^6.8.0",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
