--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://sheenlim23.github.io/portfolio",
+  "homepage": "https://sheenlim23.github.io/react-portfolio",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
